src/test/deca/codegen/valid/overflow_div_int_float.deca
// @result 28571428864
/*
    Description : Test sur la gestion de l'overflow sur la division (int/float)

    Résultat : à définir...

*/

{
    println(2000000000/0.07);
    //println("Test réussi : 28571428864");
}
