src/test/deca/codegen/invalid/object_method_call_on_null_object.deca
/*
    Description : Appel de méthode sur un objet null

    Résultat : Erreur à l'exécution
*/
class A{
    void x(){
    }
}
{
    A i;
    i.x();
}
